Bug 249214 - RemoteGraphicsContextGL crashes if platform graphics context creation fails
Summary: RemoteGraphicsContextGL crashes if platform graphics context creation fails
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGL (show other bugs)
Version: Safari Technology Preview
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-12-13 03:09 PST by Kimmo Kinnunen
Modified: 2022-12-14 03:26 PST (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2022-12-13 03:09:04 PST
RemoteGraphicsContextGL crashes if platform graphics context creation fails

Creation fails on Cocoa if ANGLE is not present, for example in recovery os.

<rdar://101584100>
Comment 1 Kimmo Kinnunen 2022-12-13 03:20:48 PST
Pull request: https://github.com/WebKit/WebKit/pull/7542
Comment 2 Kimmo Kinnunen 2022-12-13 09:51:01 PST
<rdar://101584100>
Comment 3 Kimmo Kinnunen 2022-12-13 09:51:54 PST
<rdar://103277903>
Comment 4 EWS 2022-12-14 03:26:19 PST
Committed 257843@main (a8076cd43460): <https://commits.webkit.org/257843@main>

Reviewed commits have been landed. Closing PR #7542 and removing active labels.