Cherry-pick a8076cd43460. rdar://problem/103277903

RemoteGraphicsContextGL crashes if platform graphics context creation fails
    https://bugs.webkit.org/show_bug.cgi?id=249214
    rdar://103277903

    Reviewed by Matt Woodrow.

    Creating GraphicsContextGL would fail if ANGLE shared library is not present.
    This is as intended, on macOS this happens in recovery OS.
    GPUP RemoteGraphicsContextGL would access nullptr when the unusable context
    would be destroyed.

    Guard for the nullptr context.
    Move the IPC stream connection opening in the functions that execute on
    stream work queue and start receiving messages from the stream only when
    the context creation succeeds. This way the payload functions do not need
    the nullptr guard, which they do not have.

    * Source/WTF/Scripts/Preferences/WebPreferencesInternal.yaml:
    * Source/WebCore/html/canvas/WebGLContextAttributes.idl:
    * Source/WebCore/platform/graphics/GraphicsContextGLAttributes.h:
    * Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp:
    (WebCore::GraphicsContextGLANGLE::initialize):
    * Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.cpp:
    (WebKit::RemoteGraphicsContextGL::initialize):
    (WebKit::RemoteGraphicsContextGL::stopListeningForIPC):
    (WebKit::RemoteGraphicsContextGL::workQueueInitialize):
    (WebKit::RemoteGraphicsContextGL::workQueueUninitialize):
    * Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
    * Tools/WebKitTestRunner/TestOptions.cpp:
    (WTR::TestOptions::defaults):

    Canonical link: https://commits.webkit.org/257843@main

Canonical link: https://commits.webkit.org/257698.4@safari-7615.1.15-branch